--- a/Chap_API_Sync_Access.tex
+++ b/Chap_API_Sync_Access.tex
@@ -32,14 +32,11 @@ Execute a blocking barrier across the processes identified in the specified arra
 %%%%
 \format
 
-\versionMarker{1.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Fence(const pmix_proc_t procs[], size_t nprocs,
-           const pmix_info_t info[], size_t ninfo);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Fence}{1.0}{
+pmix_status_t \\
+PMIx_Fence(const pmix_proc_t procs[], size_t nprocs, \\
+\hspace*{11\sigspace}const pmix_info_t info[], size_t ninfo);
+}
 
 \begin{arglist}
 \argin{procs}{Array of \refstruct{pmix_proc_t} structures (array of handles)}
@@ -100,15 +97,12 @@ Execute a nonblocking \refapi{PMIx_Fence} across the processes identified in the
 %%%%
 \format
 
-\versionMarker{1.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Fence_nb(const pmix_proc_t procs[], size_t nprocs,
-              const pmix_info_t info[], size_t ninfo,
-              pmix_op_cbfunc_t cbfunc, void *cbdata);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Fence_nb}{1.0}{
+pmix_status_t \\
+PMIx_Fence_nb(const pmix_proc_t procs[], size_t nprocs, \\
+\hspace*{14\sigspace}const pmix_info_t info[], size_t ninfo, \\
+\hspace*{14\sigspace}pmix_op_cbfunc_t cbfunc, void *cbdata);
+}
 
 \begin{arglist}
 \argin{procs}{Array of \refstruct{pmix_proc_t} structures (array of handles)}
@@ -187,15 +181,12 @@ Retrieve a key/value pair from the client's namespace.
 %%%%
 \format
 
-\versionMarker{1.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Get(const pmix_proc_t *proc, const pmix_key_t key,
-         const pmix_info_t info[], size_t ninfo,
-         pmix_value_t **val);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Get}{1.0}{
+pmix_status_t \\
+PMIx_Get(const pmix_proc_t *proc, const pmix_key_t key, \\
+\hspace*{9\sigspace}const pmix_info_t info[], size_t ninfo, \\
+\hspace*{9\sigspace}pmix_value_t **val);
+}
 
 \begin{arglist}
 \argin{proc}{Process identifier - a \code{NULL} value may be used in place of the caller's ID (handle)}
@@ -265,15 +256,12 @@ Nonblocking \refapi{PMIx_Get} operation.
 %%%%
 \format
 
-\versionMarker{1.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Get_nb(const pmix_proc_t *proc, const char key[],
-            const pmix_info_t info[], size_t ninfo,
-            pmix_value_cbfunc_t cbfunc, void *cbdata);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Get_nb}{1.0}{
+pmix_status_t \\
+PMIx_Get_nb(const pmix_proc_t *proc, const char key[], \\
+\hspace*{12\sigspace}const pmix_info_t info[], size_t ninfo, \\
+\hspace*{12\sigspace}pmix_value_cbfunc_t cbfunc, void *cbdata);
+}
 
 \begin{arglist}
 \argin{proc}{Process identifier - a \code{NULL} value may be used in place of the caller's ID (handle)}
@@ -402,15 +390,12 @@ Obtain the array of processes within the specified namespace that are executing 
 %%%%
 \format
 
-\versionMarker{1.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Resolve_peers(const char *nodename,
-                   const pmix_nspace_t nspace,
-                   pmix_proc_t **procs, size_t *nprocs);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Resolve_peers}{1.0}{
+pmix_status_t \\
+PMIx_Resolve_peers(const char *nodename, \\
+\hspace*{19\sigspace}const pmix_nspace_t nspace, \\
+\hspace*{19\sigspace}pmix_proc_t **procs, size_t *nprocs);
+}
 
 \begin{arglist}
 \argin{nodename}{Name of the node to query - \code{NULL} can be used to denote the current local node (string)}
@@ -444,13 +429,10 @@ Return a list of nodes hosting processes within the given namespace.
 %%%%
 \format
 
-\versionMarker{1.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
+\copySignature{PMIx_Resolve_nodes}{1.0}{
+pmix_status_t \\
 PMIx_Resolve_nodes(const char *nspace, char **nodelist);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{nspace}{Namespace (string)}
@@ -479,14 +461,11 @@ Query information about the system in general.
 %%%%
 \format
 
-\versionMarker{4.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Query_info(pmix_query_t queries[], size_t nqueries,
-                pmix_info_t *info[], size_t *ninfo);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Query_info}{4.0}{
+pmix_status_t \\
+PMIx_Query_info(pmix_query_t queries[], size_t nqueries, \\
+\hspace*{16\sigspace}pmix_info_t *info[], size_t *ninfo);
+}
 
 \begin{arglist}
 \argin{queries}{Array of query structures (array of handles)}
@@ -590,14 +569,11 @@ Query information about the system in general.
 %%%%
 \format
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Query_info_nb(pmix_query_t queries[], size_t nqueries,
-                   pmix_info_cbfunc_t cbfunc, void *cbdata);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Query_info_nb}{2.0}{
+pmix_status_t \\
+PMIx_Query_info_nb(pmix_query_t queries[], size_t nqueries, \\
+\hspace*{19\sigspace}pmix_info_cbfunc_t cbfunc, void *cbdata);
+}
 
 \begin{arglist}
 \argin{queries}{Array of query structures (array of handles)}
@@ -862,16 +838,13 @@ Request attributes supported by the \ac{PMIx} tool library functions.
 
 The \refstruct{pmix_query_t} structure is used by the \refapi{PMIx_Query_info} \acp{API} to describe a single query operation.
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-typedef struct pmix_query \{
-    char **keys;
-    pmix_info_t *qualifiers;
-    size_t nqual;
+\copySignature{pmix_query_t}{2.0}{
+typedef struct pmix_query \{ \\
+\hspace*{4\sigspace}char **keys; \\
+\hspace*{4\sigspace}pmix_info_t *qualifiers; \\
+\hspace*{4\sigspace}size_t nqual; \\
 \} pmix_query_t;
-\end{codepar}
-\cspecificend
+}
 
 where:
 
@@ -890,12 +863,9 @@ The following macros are provided to support the \refstruct{pmix_query_t} struct
 
 Initialize the \refstruct{pmix_query_t} fields
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_QUERY_CONSTRUCT}{2.0}{
 PMIX_QUERY_CONSTRUCT(m)
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{m}{Pointer to the structure to be initialized (pointer to \refstruct{pmix_query_t})}
@@ -906,12 +876,9 @@ PMIX_QUERY_CONSTRUCT(m)
 
 Destruct the \refstruct{pmix_query_t} fields
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_QUERY_DESTRUCT}{2.0}{
 PMIX_QUERY_DESTRUCT(m)
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{m}{Pointer to the structure to be destructed (pointer to \refstruct{pmix_query_t})}
@@ -923,12 +890,9 @@ PMIX_QUERY_DESTRUCT(m)
 
 Allocate and initialize an array of \refstruct{pmix_query_t} structures
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_QUERY_CREATE}{2.0}{
 PMIX_QUERY_CREATE(m, n)
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \arginout{m}{Address where the pointer to the array of \refstruct{pmix_query_t} structures shall be stored (handle)}
@@ -942,12 +906,9 @@ PMIX_QUERY_CREATE(m, n)
 
 Release a \refstruct{pmix_query_t} structure
 
-\versionMarker{4.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_QUERY_RELEASE}{4.0}{
 PMIX_QUERY_RELEASE(m)
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{m}{Pointer to a \refstruct{pmix_query_t} structure (handle)}
@@ -959,12 +920,9 @@ PMIX_QUERY_RELEASE(m)
 
 Release an array of \refstruct{pmix_query_t} structures
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_QUERY_FREE}{2.0}{
 PMIX_QUERY_FREE(m, n)
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{m}{Pointer to the array of \refstruct{pmix_query_t} structures (handle)}
@@ -977,12 +935,9 @@ PMIX_QUERY_FREE(m, n)
 
 Create an array of \refstruct{pmix_info_t} structures for passing query qualifiers, updating the \refarg{nqual} field of the \refstruct{pmix_query_t} structure.
 
-\versionMarker{2.2}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_QUERY_QUALIFIERS_CREATE}{2.2}{
 PMIX_QUERY_QUALIFIERS_CREATE(m, n)
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{m}{Pointer to the \refstruct{pmix_query_t} structure (handle)}
