--- a/App_Use_Cases.tex
+++ b/App_Use_Cases.tex
@@ -8,4 +8,220 @@ The \ac{PMIx} standard provides many generic interfaces that can be composed int
 
 Each use case is structured to provide background information about the high-level use case as well as specific details about how the PMIx interfaces are used within the use case.  Some use cases even provide code snippets.  These code snippets are apart of larger code examples located within the standard's source code repository, and each complete code example is fully compilable and runnable. The related interfaces and attributes collected at the bottom of each use case are mainly for conveinence and link to the full standardized definitions.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section {Business Card Exchange for Process-to-Process Wire-up}
+\label{app:uc-business-card-exchange}
+
+\subsection{Use Case Summary}
+
+Multi-process communication libraries, such as MPI, need to establish communication channels between a set of those processes. Each process needs to share connectivity information (a.k.a. Business Cards) with all other processes before communication channels can be established. This connectivity information may take the form of one or more unique strings that allow a different process to establish a communication channel with the originator. The runtime environment must provide a mechanism for the efficient exchange of this connectivity information. Additional information about the current state of the job (e.g., number of processes globally and locally) and of how the process was started (e.g., process binding) are also helpful.
+Use Case Details
+
+Note: The Instant-On wire-up mechanism is a separate, related use case.
+
+\subsection{Use Case Details}
+
+Each process provides their business card to PMIx via one or more \refapi{PMIx_Put} operations to store the tuple of \code{\{UID, key, value\}}. The \code{UID} is the unique name for this process in the \ac{PMIx} universe (i.e., \code{namespace} and \code{rank}). The \code{key} is a unique key that other processes can reference generically (note that since the \code{UID} is also associated with the \code{key} there is no need to make the \code{key} uniquely named per process). The \code{value} is the string representation of the connectivity information.
+
+Some business card information is meant for remote processes (e.g., TCP or InfiniBand addresses) while others are meant only for local processes (e.g., shared memory information). As such a \code{scope} should be associated with the \refapi{PMIx_Put} operation to differentiate this intention.
+
+The \refapi{PMIx_Put} operations may be cached local to the process. Once all \refapi{PMIx_Put} operations have been called each process should call \refapi{PMIx_Commit} to push those values to the local PMIx server. Note that in a multi-library configuration each library may \refapi{PMIx_Put} then \refapi{PMIx_Commit} values - so there may be multiple \refapi{PMIx_Commit} calls before a Business Card Exchange is activated.
+
+After calling \refapi{PMIx_Commit} a process can activate the Business Card Exchange collective operation by calling \refapi{PMIx_Fence}. The \refapi{PMIx_Fence} operation is collective over the set of processes specified in the argument set. That allows for the collective to span a subset of a namespace or multiple namespaces. After the completion of the \refapi{PMIx_Fence} operation, the data \refapi{PMIx_Put} by other processes is available to the local process through a call to \refapi{PMIx_Get} which returns the key/value pairs necessary to establish the connection(s) with the other processes.
+
+The \refapi{PMIx_Fence} operation must have a "Synchronize Only" mode that works as a barrier operation. This is helpful if the communication library requires a synchronization before leaving initialization or starting finalization, for example.
+
+The \refapi{PMIx_Fence} operation should have a "Sparse" mode in addition to a "Full" mode for the data exchange. The "Full" mode will fully exchange all Business Card information to all other processes. This is helpful for tightly communicating applications. The "Sparse" mode will dynamically pull the connectivity information on-demand from inside of \refapi{PMIx_Get} (if it is not already available locally). This is helpful for sparsely communicating applications. Since which mode is best for an application cannot be inferred by the PMIx library the caller must specify which mode works best for their application.
+
+The \refapi{PMIx_Fence} operation should have an option for the end user to specify which mode they desire for this operation.
+
+Additional information about the current state of the job (e.g., number of processes globally and locally) and of how the process was started (e.g., process binding) are also helpful. This "job level" information must be available immediately after PMIx_Init without the need for any explicit synchronization.
+
+The number of processes globally in the namespace and this process's rank within that namespace is important to know before establishing the Business Card information to best allocate resources.
+
+The number of processes local to the node and this process's local rank is important to know before establishing the Business Card information to help the caller determine the scope of the put operation. For example, to designate a leader to set up a shared memory segment of the proper size before putting that information into the locally scoped Business Card information.
+
+The number of processes local to a remote node is also helpful to know before establishing the Business Card information. This information is useful to pre-establish local resources before that remote node starts to initiate a connection or to determine the number of connections that need to be advertised in the Business Card when it is sent out.
+
+Note that some of the job level information may change over the course of the job in a dynamic application.
+
+\littleheader{Related Interfaces}
+
+{\large \refapi{PMIx_Put}}
+\pasteSignature{PMIx_Put}
+
+{\large \refapi{PMIx_Get}}
+\pasteSignature{PMIx_Get}
+
+{\large \refapi{PMIx_Commit}}
+\pasteSignature{PMIx_Commit}
+
+{\large \refapi{PMIx_Fence}}
+\pasteSignature{PMIx_Fence}
+
+{\large \refapi{PMIx_Init}}
+\pasteSignature{PMIx_Init}
+
+\littleheader{Related Keys}
+
+The following job level information is useful to have before establishing Business Card information:
+
+\pasteAttributeItem{PMIX_NODE_LIST}
+\pasteAttributeItem{PMIX_NUM_NODES}
+\pasteAttributeItem{PMIX_NODEID}
+\pasteAttributeItem{PMIX_JOB_SIZE}
+\pasteAttributeItem{PMIX_PROC_MAP}
+\pasteAttributeItem{PMIX_LOCAL_PEERS}
+\pasteAttributeItem{PMIX_LOCAL_SIZE}
+
+For each process this information is also useful (note that any one process may want to access this list of information about any other process in the system):
+
+\pasteAttributeItem{PMIX_RANK}
+\pasteAttributeItem{PMIX_LOCAL_RANK}
+\pasteAttributeItem{PMIX_GLOBAL_RANK}
+\pasteAttributeItem{PMIX_LOCALITY_STRING}
+\pasteAttributeItem{PMIX_HOSTNAME}
+
+There are other keys that are helpful to have before a synchronization point, this is not meant to be a comprehensive list.
+
+\section{Hybrid Programming Models}
+\label{app:uc-hybrid-programming-models}
+
+\subsection{Use Case Summary}
+
+Hybrid applications (i.e., applications that utilize more than one lprogramming model, such as an MPI application that also uses OpenMP or PGAS) are growing in popularity, especially as chips with increasingly large numbers of cores and processors proliferate. Unfortunately, the various models currently operate under the assumption that they alone control execution. This leads to conflicts in hybrid applications. Deadlock of parallel applications can occur when one model prevents the other from making progress due to lack of coordination between the multiple programming models~\cite{2016:Hamidouche}.  Sub-optimal performance can also occur due to uncoordinated division of hardware resources between the programming models~\cite{2018:Vallee,ompix-moc}. This use-case offers potential solutions to the problem by providing a pathway for programming models to coordinate their actions.
+
+\subsection{Use Case Details}
+
+\subsubsection{Identifying Active Programming Models}
+
+The current state-of-the-practice for programming models to detect one another is via set environment variables.  For example, OpenMP looks for environment variables to indicate that MPI is active.  Unfortunately, this technique is not completely reliable as environment variables change over time and with new software versions.  Also, the fact that an environment variable is present doesn't guarantee that a particular programming is in active use since Resource Managers routinely set environment variables "just in case" the application needs them. PMIx provides a reliable mechanism by which each library can determine that another library is in operation.
+
+When initializing PMIx, programming models can register themselves, including their name, version, and threading model.  This information is then cached locally and can then be read asynchronously by other programming models using PMIx's Event Notification system (see next section for more details).
+
+This initialization mechanism also allows libraries to share knowledge of each other's resources and intended resource utilization. For example, if OpenMP knows which hardware threads that MPI is using it could potentially avoid processor and cache contention.
+
+\littleheader{Code Example}
+
+\pmixCodeImportC[]{sources/hybrid-prog-model/declare_model.c}
+
+\littleheader{Related Interfaces}
+
+{\large \refapi{PMIx_Init}}
+\pasteSignature{PMIx_Init}
+
+\littleheader{Related Attributes}
+
+\pasteAttributeItem{PMIX_PROGRAMMING_MODEL}
+\pasteAttributeItem{PMIX_MODEL_LIBRARY_NAME}
+\pasteAttributeItem{PMIX_MODEL_LIBRARY_VERSION}
+\pasteAttributeItem{PMIX_THREADING_MODEL}
+\pasteAttributeItem{PMIX_MODEL_NUM_THREADS}
+\pasteAttributeItem{PMIX_MODEL_NUM_CPUS}
+\pasteAttributeItem{PMIX_MODEL_CPU_TYPE}
+\pasteAttributeItem{PMIX_MODEL_PHASE_NAME}
+\pasteAttributeItem{PMIX_MODEL_PHASE_TYPE}
+\pasteAttributeItem{PMIX_MODEL_AFFINITY_POLICY}
+
+\subsubsection{Coordinating at Runtime}
+
+The PMIx Event Notification system provides a mechanism by which the resource manager can communicate system events to applications, thus providing applications with an opportunity to generate an appropriate response. Hybrid applications can leverage these events for cross-library coordination.
+
+Programming models can access the information provided by other programming models during their initialization using the event notification system.  In this case, programming models should register a callback for the \refconst{PMIX_MODEL_DECLARED} event.
+
+Programming models can also use the PMIx event notification system to communicate dynamic information, such as entering a new application phase (\refconst{PMIX_MODEL_PHASE_NAME}) or a change in resources used (\refconst{PMIX_MODEL_RESOURCES}).  This dynamic information can be broadcast to other programming models using the \refapi{PMIx_Notify_event} function.  Other programming models can register callback functions to run when these events occur (i.e., callback functions) using \refapi{PMIx_Register_event_handler}.
+
+\littleheader{Code Example}
+
+Registering a callback to run when another programming model initializes:
+\pmixCodeJoinStart{}%
+\pmixCodeImportC[]{sources/hybrid-prog-model/declare_model_cb.c}
+\pmixCodeJoin{}%
+\pmixCodeImportC[]{sources/hybrid-prog-model/register_declare_model_cb.c}
+\pmixCodeJoinEnd{}%
+
+
+Notifying an event:
+\pmixCodeImportC[]{sources/hybrid-prog-model/notify_event.c}
+
+\littleheader{Related Interfaces and Constants}
+
+{\large \refapi{PMIx_Notify_event}}
+\pasteSignature{PMIx_Notify_event}
+
+\refconst{PMIX_MODEL_DECLARED} \\
+\refconst{PMIX_MODEL_RESOURCES} \\
+\refconst{PMIX_OPENMP_PARALLEL_ENTERED} \\
+\refconst{PMIX_OPENMP_PARALLEL_EXITED} \\
+
+{\large \refapi{PMIx_Register_event_handler}}
+\pasteSignature{PMIx_Register_event_handler}
+
+%\pastePRIAttributeItem{PMIX_RANGE}
+
+{\large \refapi{pmix_event_notification_cbfunc_fn_t}}
+\pasteSignature{pmix_event_notification_cbfunc_fn_t}
+
+\refconst{PMIX_EVENT_ACTION_COMPLETE}
+
+
+
+\subsubsection{Coordinating at Runtime with Multiple Event Handlers}
+
+Coordinating with a threading library such as OpenMP creates the need for separate event handlers for threads of the same process.  For example in an MPI+OpenMP hybrid application, the MPI thread and the main OpenMP thread may both want to be notified anytime an OpenMP worker thread enters a parallel region.  This requiring support for multiple threads to potentially register different event handlers against the same status code.
+
+Multiple event handlers registered against the same event are processed in a chain-like manner based on the order in which they were registered, as modified by directive. Registrations against specific event codes are processed first, followed by registrations against multiple event codes and then any default registrations. At each point in the chain, an event handler is called by the PMIx progress thread and given a function to call when that handler has completed its operation. The handler callback notifies PMIx that the handler is done, returning a status code to indicate the result of its work. The results are appended to the array of prior results, with the returned values combined into an array within a single pmix_info_t as follows:
+\begin{itemize}
+\item \texttt{array[0]}: the event handler name provided at registration (may be an empty field if a string name was not given) will be in the key, with the pmix_status_t value returned by the handler
+\item \texttt{array[*]}: the array of results returned by the handler, if any.
+\end{itemize}
+
+The current PMIx standard does not actually specify a default ordering for event handlers as they are being registered. However, it does include an inherent ordering for invocation. Specifically, PMIx stipulates that handlers be called in the following categorical order:
+
+\begin{itemize}
+\item single status event handlers - i.e., handlers that were registered against a single specific status.
+\item multi status event handlers - those registered against more than one specific status
+\item default event handlers - those registered against no specific status
+\end{itemize}
+
+\littleheader{Code Example}
+
+From the OpenMP master thread:
+
+\pmixCodeJoinStart{}%
+\pmixCodeImportC[]{sources/hybrid-prog-model/parallel_omp_cb.c}%
+\pmixCodeJoin{}%
+\pmixCodeImportC[]{sources/hybrid-prog-model/omp_thread.c}
+\pmixCodeJoinEnd{}%
+
+From the MPI thread:
+
+\pmixCodeJoinStart{}%
+\pmixCodeImportC[]{sources/hybrid-prog-model/parallel_mpi_cb.c}
+\pmixCodeJoin{}%
+\pmixCodeImportC[]{sources/hybrid-prog-model/mpi_thread.c}
+\pmixCodeJoinEnd{}%
+
+\littleheader{Related Interfaces, Attributes, and Constants}
+
+{\large \refapi{PMIx_Register_event_handler}}
+\pasteSignature{PMIx_Register_event_handler}
+
+\pasteAttributeItem{PMIX_EVENT_HDLR_NAME}
+\pasteAttributeItem{PMIX_EVENT_HDLR_FIRST}
+\pasteAttributeItem{PMIX_EVENT_HDLR_LAST}
+\pasteAttributeItem{PMIX_EVENT_HDLR_FIRST_IN_CATEGORY}
+\pasteAttributeItem{PMIX_EVENT_HDLR_LAST_IN_CATEGORY}
+\pasteAttributeItem{PMIX_EVENT_HDLR_BEFORE}
+\pasteAttributeItem{PMIX_EVENT_HDLR_AFTER}
+\pasteAttributeItem{PMIX_EVENT_HDLR_APPEND}
+
+{\large \refapi{pmix_event_notification_cbfunc_fn_t}}
+\pasteSignature{pmix_event_notification_cbfunc_fn_t}
+
+\refconst{PMIX_EVENT_NO_ACTION_TAKEN} \\
+\refconst{PMIX_EVENT_PARTIAL_ACTION_TAKEN} \\
+\refconst{PMIX_EVENT_ACTION_DEFERRED} \\
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
